syntax = "proto3";

package com.coralogixapis.views.v1;

import "google/protobuf/wrappers.proto";

message Filter {
  google.protobuf.StringValue name = 1;
  map<string, bool> selected_values = 2;
}

message SelectedFilters {
  repeated Filter filters = 1;
}
