syntax = "proto3";

package com.coralogixapis.views.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message TimeSelection {
  oneof selection_type {
    QuickTimeSelection quick_selection = 1;
    CustomTimeSelection custom_selection = 2;
  }
}

message QuickTimeSelection {
  google.protobuf.StringValue caption = 2 [deprecated = true];
  uint32 seconds = 3;
}

message CustomTimeSelection {
  google.protobuf.Timestamp from_time = 1;
  google.protobuf.Timestamp to_time = 2;
}
